initial fork commit

--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -16,7 +16,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
       with:
-        node-version: 18
+        node-version: 20
 
     - name: Make chunks
       run: |
@@ -24,7 +24,7 @@ jobs:
         cd helpers/chunkify
         npm install
         cd ../..
-        node helpers/chunkify/index.mjs 4
+        node helpers/chunkify/index.mjs 6
 
     - name: Upload chunks
       uses: actions/upload-artifact@v3
@@ -52,24 +52,19 @@ jobs:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       CHUNKS_PATH: ../chunks/chunks.json
       CHUNK_NUMBER: ${{ matrix.chunk }}
-      CHUNK_COUNT: 4
+      CHUNK_COUNT: 6
 
     strategy:
       fail-fast: false
       matrix:
-        engine: [v8, v8_exp, jsc, sm, sm_exp, chakra, hermes, kiesel, porffor, libjs, engine262, qjs, qjs_ng, xs, graaljs, nashorn, rhino, boa, babel, swc, sucrase] # all
-
-        chunk: [0, 1, 2, 3]
-        # engine: [v8, jsc, sm, chakra, hermes, kiesel, libjs, qjs, xs, graaljs] # exclude hangers/long
-        # engine: [chakra, graaljs, jsc, kiesel, libjs, qjs, xs] # all fast
-        # engine: [v8, jsc, sm, chakra] # just major
-        # engine: [hermes] # just hermes
+        engine: [node, bun]
+        chunk: [0, 1, 2, 3, 4, 5]
 
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
       with:
-        node-version: 18
+        node-version: 20
 
     - name: Download chunks
       uses: actions/download-artifact@v3
