--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -73,7 +73,7 @@ jobs:
         path: chunks
 
     - name: Run test262 with ${{ matrix.engine }}
-      run: ./scripts/engines/${{ matrix.engine }}.sh
+      run: sh ./scripts/engines/${{ matrix.engine }}.sh
 
     - name: Upload results
       uses: actions/upload-artifact@v3
